--- a/index.Rmd
+++ b/index.Rmd
@@ -7,9 +7,11 @@ output:
   bookdown::gitbook:
     self_contained: true
 documentclass: book
-link-citations: yes
 description: ""
----
+link-citations: yes
+bibliography: kirjandus.bib
+csl: ./harvard-european-archaeology.csl # võib ka midagi muud kasutada. Ma lihtsalt seda varem kasutanud ja seal on mitme autori puhul "et. al" mitte nimede loetelu, mis sobib siin rohkem.
+--- 
 
 ```{r global_options, include = FALSE}
 knitr::opts_chunk$set(message=FALSE, 
@@ -38,9 +40,16 @@ knitr::opts_chunk$set(message=FALSE,
 
 ## Mis on geoinfosüsteemid?
 
-<!-- mingi gisi wordcloud -->
+```{r lotr-map, echo=F, fig.show='hold', fig.align='center', out.width= "100%", fig.cap= "Eesti kujutatud Sõrmuste Isanda kaartide stiilis, [@evelynuuenmaa](https://twitter.com/evelynuuemaa/status/1291261715095662592?s=07&fbclid=IwAR1q6bpp4c7UNOTYph2YngZ7DrlBzrftR1gX2upWtoVNxLNzdFsgXZv_sVQ)"}
+knitr::include_graphics(here::here("../imgs", "example_lotr_uuenmaa.jpg"))
+```
+
 
 Geoinfosüsteem on arvutipõhine süsteem ruumiliste ja mitteruumiliste andmete kogumiseks, haldamiseks, analüüsiks, visualiseerimiseks ja jagamiseks. Selle abil on võimalik ruumisuhete kaudu mõista oma andmeid paremini või teisest vaatepunktist ning sedakaudu teha kaalutletumaid otsuseid.
+
+```{r gis-wordcloud, echo=F, fig.show='hold', fig.align='center', out.width= "80%", fig.cap= "Mida GISiga tehakse? [@Wallentin2015, jn 4]"}
+knitr::include_graphics(here::here("../imgs", "gis_wordcloud_wallentin2015.png"))
+```
 
 Andmete
 - kogumine (nt paberkaartide digiteerimine, päringud repositooriumidest, käsitsi sisestamine);<!--  sekundaarne andmete kogumine-->   
@@ -49,17 +58,28 @@ Andmete
 - visualiseerimine (nt kaartide koostamine ja kujundamine);
 - jagamine (nt projektide majutamine veebis, andmete ja metaandmete publitseerimine).  
 
+```{r gis-umbrella, echo = FALSE, fig.align='center', out.width= "75%", fig.cap="GIS kui vihmavari, [What are Geographic Information Systems](http://spatialquerylab.com/FOSS4GAcademy/Lectures/GST101/L1/1-What_are_Geographic_Information_Systems.pdf)"}
+knitr::include_graphics(here::here("../imgs", "intro_GISumbrella.PNG"))
+```
 
 Ehkki vahel käsitletakse geoinfosüsteeme kui mingit kindlat tarkvara (nt ArcView, MapInfo, ArcGIS), on GIS definitsioonilt pigem mingite funktsionaalsuste kogum. See tähendab ka seda, et erinevad tarkvarad või selle osad võivad spetsialiseeruda erinevatele funktsioonidele ning mingeid funktsioone (nt andmete kogumine) ei pea üldse tarkvara abil täitma.
 
-![](./imgs/intro_GISumbrella.PNG)
-*(http://spatialquerylab.com/FOSS4GAcademy/Lectures/GST101/L1/1-What_are_Geographic_Information_Systems.pdf)*
+```{r gis-tarkvarad, echo=F, fig.show='hold', fig.align='default', out.width= "25%",  out.height="50%", fig.cap= "Populaarsed GIS tarkvarad"}
+knitr::include_graphics(here::here("../imgs", c("arcgis_logo.jpg", "qgis_logo.png", "grassgis_logo.png", "Rlogo.png")))
+```
 
 Kuigi GIS võib talletada ka mitteruumilist infot, moodustavad kõige olemuslikuma osa geoinfosüsteemidest siiski just ruumiandmed, kuna GIS tegeleb kõikide teiste andmetega selle alusel, kus need paiknevad mingis koordinaatsüsteemis. Kõige sagedamini kasutatakse GISi geograafiliste andmete töötlemiseks, ent neid saab põhimõtteliselt kasutada mis tahes andmete jaoks, millel on mingid dimensioonid (nt väljamõeldud kohad; inimkeha; planeetide pinnad; puuviljad jne). Geoinfosüsteemidest võib seega kõige lihtsamal moel mõelda kui koordinaatidega varustatud andmebaasidest ja nende sisu analüüsimiseks ja visualiseerimiseks mõeldud tööriistadest. 
 
+```{r kihid, echo=F, fig.show='hold', fig.align='center', out.width= "75%", fig.cap= "Andmete hoidmine GISis kihtidena, [GIS NatGeo](https://www.nationalgeographic.org/encyclopedia/geographic-information-system-gis/)"}
+knitr::include_graphics(here::here("../imgs", "gis_natgeo.jpg"))
+```
+
+
 Nagu öeldud, võivad GIS-andmebaasid sisaldada nii ruumilist kui ka mitteruumilist infot. Ruumilist infot väljendatakse koordinaatidega (nt *x*, *y*, *z*, pikkus- ja laiuskraad, kõrgus merepinnast). Mitteruumilist infot, mis  mingit kohaga seotud on, väljendavad **atribuudid**. Atribuudid võivad olla salvestatud tabelina, kus iga objekt on eraldi real ning iga atribuut eraldi tulbas, või mingis muus (nt hierarhilises) andmebaasistruktuuris.
 
-<!-- näide atribuuttabelist -->
+```{r attribute-table, echo = FALSE, fig.align = 'center', out.width = "100%", fig.cap = "Näide QGISi atribuuttabelist"}
+knitr::include_graphics(here::here("../imgs", "qgis_attribute_table.PNG"))
+```
 
 Kuna geoinfosüsteemid on arvutipõhised, nõuavad need, et andmed oleksid mingil moel formaliseeritud. See tähendab ka vahel seda, et tuleb andmetele suruda peale jäigad kategooriad ka seal, kus kategooriatevahelised piirid on tegelikult sujuvad ning on palju üleminekualasid. <!-- näiteks võime kasutada kihelkonnapiire mingite keeleliste piirkondade eraldajatena -->
 
@@ -127,12 +147,34 @@ Geo- ja ruumihumanitaaria fookus ei ole aga pelgalt tehniliste analüüsimeetodi
 
 <!-- Siia mingeid ruumihumanitaaria jooniseid -->
 
-
-<!-- Arheoloogia uurib selgelt mateeriat; küsitakse kes tegi mida ja millal, aga esimene küsimus on peaaegu alati "kus?". Näiteks uuritakse maastike muutumist, potitükikeste paiknemist kuskil väljakaevamisel, luude paiknemist hauas.  -->
-
 Siiski on vahest enamgi neid, kes ühel või teisel moel ruumiandmeid ja geoinfosüsteeme oma töös ära kasutavad, ilma et ennast või oma uurimistööd spetsiifiliselt ruumi- või geohumanitaaria valdkonna kaudu defineeriksid. Sellise üldise ruumiandmete analüüsi tööriistakasti koostamisega tegeleme ka siin kursusel. <!-- Kursus ei ole ruumihumanitaaria kursus, vaid pigem praktilisema suunitlusega. Näita aine väljundeid ja ainekava! -->
 
 <!-- siia lihtsalt GISi kasutavate humanitaaria ja sotsiaalia uurimuste jooniseid -->
+### Arheoloogia
+
+<!-- Lisan mingit juttu siia GISi ajaloost natuke arheoloogias. Kui jõuan, siis kirjutan. Kui ei, siis räägin niisama loengus -->
+
+```{r arheo-example, echo = FALSE, fig.align = 'center', out.width = "50%", fig.cap = "Muististe jaotumise visualiseerimine ja kiviaegse maastiku rekonstruktsioonid (9700 - 5300 eKr) [@Rosentau2013, jn 7]"}
+knitr::include_graphics(here::here("../imgs", c("arheo_example_teemakaart_kimber.jpeg", "arheo_example_rosentau2013.png")))
+```
+
+```{r arheo-example2, echo = FALSE, fig.align = 'center', out.width = "50%", fig.cap = "Muinasaegsete asulakohtade ennustav mudeldamine [@Haav2014, jn 11]ja maastiku nähtavuse analüüsimine [@Kimber2016, jn 5]"}
+knitr::include_graphics(here::here("../imgs", c("arheo_example_haav_asulate_mudel.png", "arheo_example_kimber_lohukivid_totalviewshed.jpg")))
+```
+
+<!-- Võiksin siia lisada veel mõne näited kõrgusmudelitest -->
+
+### Veel näiteid
+
+<!-- See ei ole kõige lahedam näide, aga ma ei leidnud nendest mitmest GISi ja humanitaaria raamatust midagi paremat -->
+```{r more-examples1, echo = FALSE, fig.align = 'center', out.width = "100%", fig.cap = "Rongiliikluse areng Prantsusmaal [@Gregory2014, jn 1.3]"}
+knitr::include_graphics(here::here("../imgs", "example_france_trains_geddes2014.png"))
+```
+ 
+```{r more-examples2, echo = FALSE, fig.align = 'center', out.width = "100%", fig.cap = "Pariisi tänavate nimetamine kirjanduses [@Moncla2019, jn 4]"}
+knitr::include_graphics(here::here("../imgs", "example_moncla_paris_street_mentions.png"))
+```
+<!-- Arheoloogia uurib selgelt mateeriat; küsitakse kes tegi mida ja millal, aga esimene küsimus on peaaegu alati "kus?". Näiteks uuritakse maastike muutumist, potitükikeste paiknemist kuskil väljakaevamisel, luude paiknemist hauas.  -->
 
 ## Küsitlus/rühmatöö
 
@@ -140,7 +182,7 @@ Palun täida Moodle'is lühike küsimustik.
 
 <!-- Tutvumisring. Räägime ise paari sõnaga sellest, mida oleme teinud. Ja palume kõigil öelda, mis eriala ja kuidas tema erialal võiks GISi, ruumiandmeid või kaardistamist kasutada. Kattub veits küll küsimustiga, aga vast ok. -->
 
-<!-- Võiks anda mingi ülesande, et nt peaks joonistama kaardi kodukohast või -hoovist, tee kodust kooli või poodi, lemmikkohast (reaalses maailmas, kirjanduses, filmis). Selle põhjal arutada kaardi elementide üle. Millele pöörati tähelepanu, milliseid objekte kasutati (joon, punkt, ala), kas on mõõtkavas, kas põhjasuund olemas, kas need on tähtsad. Kas mõtlesid sellele, kes seda kasutada võiks? Milliseid andmeid oleks vaja selle koostamiseks arvutis? -->
+<!-- Teha pigem mõnel järgmisel korral: anda ülesande, et nt peaks joonistama kaardi kodukohast või -hoovist, tee kodust kooli või poodi, lemmikkohast (reaalses maailmas, kirjanduses, filmis). Selle põhjal arutada kaardi elementide üle. Millele pöörati tähelepanu, milliseid objekte kasutati (joon, punkt, ala), kas on mõõtkavas, kas põhjasuund olemas, kas need on tähtsad. Kas mõtlesid sellele, kes seda kasutada võiks? Milliseid andmeid oleks vaja selle koostamiseks arvutis? -->
 
 ## Järgmisel korral
 
@@ -158,3 +200,6 @@ Artiklite pdf-id leiad Moodle'ist.
 <!-- Lisada teemad, mida järgmisel korral arutame -->
 - 
 
+
+Kirjandus
+===========
