--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -125,4 +125,18 @@ title = {{Toward spatial humanities: Historical gis and spatial history}},
 url = {https://www.jstor.org/stable/j.ctt16gz7s5},
 year = {2014}
 }
+@article{Presner2015,
+abstract = {The digital humanities has taken a spatial turn with the proliferation of web- and GPS-enabled devices, the simplification of the technical software required to make maps, and the wide availability of historical imagery and geographic datasets. This chapter begins by exploring the governmental and military origins of geographic information systems (GIS) before turning to the emergence of "geohumanities," a differentiated field that builds on and variously repurposes GIS technologies though humanistic methods and content. From reconstructions of ancient building sites to platforms for overlaying maps that tell competing narratives, geohumanities has challenged many assumptions and limits of spatial technologies through the qualitative, historical, and interpretative methods of the humanities. Through processes of thick mapping and counter-mapping, the spatial turn in the digital humanities has also given rise to a broader scholarly reconceptualization of the significance of place in relationship to narrative, practices of representation, and digital technologies.},
+author = {Presner, Todd and Shepard, David},
+doi = {10.1002/9781118680605.ch14},
+file = {:C$\backslash$:/literature/Presner {\&} Shepard - 2016 - Mapping the Geospatial Turn.pdf.pdf:pdf},
+isbn = {9781118680605},
+journal = {A New Companion to Digital Humanities},
+keywords = {Critical cartography,GIS,GISi kursus,Geo-visualization,Geographic information systems (GIS),Geohumanities,Global positioning system (GPS),Open geospatial consortium,Spatial turn,Teaching,Thick mapping},
+mendeley-tags = {GIS,GISi kursus,Geohumanities,Teaching},
+pages = {199--212},
+title = {{Mapping the Geospatial Turn}},
+year = {2015}
+}
+
 
