--- a/_08-avaandmed.Rmd
+++ b/_08-avaandmed.Rmd
@@ -1,4 +1,4 @@
-# Avaandmed ja repositooriumid {#avaandmed}
+# Avaandmed ja repositooriumid {#avaandmed2}
 
 Andmebaasidega tutvumine
 Ruumiandmete lisamine andmestikule, andmestike struktuur
