--- a/_12-visualiseerimine.Rmd
+++ b/_12-visualiseerimine.Rmd
@@ -1,2 +1,4 @@
-# Ruumiandmete visualiseerimine {#visualiseerimine4}
+# Ruumiandmete visualiseerimine {#visualiseerimine3}
 
+Time series
+Animatsioonid, 3D?
