--- a/_14-tekstianalyys.Rmd
+++ b/_14-tekstianalyys.Rmd
@@ -1,3 +1,3 @@
-# Geograafiline tekstianalüüs {#tekstianalyys2}
+# Geograafiline tekstianalüüs {#tekstianalyys}
 
-Kollokatsioonid?
+Geoparsing, nimede ekstraheerimine tekstist
