--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -138,5 +138,33 @@ pages = {199--212},
 title = {{Mapping the Geospatial Turn}},
 year = {2015}
 }
-
+@book{Bolstad2016,
+abstract = {},
+author = {Bolstad, Paul},
+booktitle = {A First Text on Geographic Information Systems, 5th edition},
+isbn = {9781506695877},
+keywords = {GIS},
+mendeley-tags = {GIS},
+pages = {1--769},
+title = {{A First Text on Geographic Information Systems, 5th edition}},
+year = {2016}
+}
+@book{Ballas2018,
+author = {Ballas, Dimitris, Clarke, Graham, Franklin Rachel and Newing, Andy},
+booktitle = {GIS and the Social Sciences: Theory and Application},
+isbn = {9781138785120},
+keywords = {GIS},
+mendeley-tags = {GIS},
+pages = {1--279},
+publisher = {Routledge},
+title = {{GIS and the Social Sciences: Theory and Application}},
+year = {2018}
+}
+@book{Okabe2006,
+author = {Okabe, Atsuyuki},
+booktitle = {GIS-Based Studies in the Humanities and Social Sciences},
+publisher = {Taylor & Francis Group},
+title = {{GIS-Based Studies in the Humanities and Social Sciences}},
+year = {2006}
+}
 
