--- a/kirjandus.bib
+++ b/kirjandus.bib
@@ -167,4 +167,9 @@ publisher = {Taylor & Francis Group},
 title = {{GIS-Based Studies in the Humanities and Social Sciences}},
 year = {2006}
 }
+@misc{Suurna&Sisas2010,
+author = {Suurna, Ranel, Sisas, Eveli},
+title = {GIS ja kartograafia alused},
+url = {https://www.digar.ee/arhiiv/nlib-digar:120392},
+year = {2010}}
 
